# smart-todo-app

./: README.md
todo-app/: .gitignore  pyproject.toml  tree_structure.txt
todo-app/database/: todo-app.json
todo-app/src/todo_app/: config.py  main.py
todo-app/src/todo_app/cli_interface/: cli_app.py  cli_helper.py
todo-app/src/todo_app/models/: app.py  task.py
todo-app/src/todo_app/parsers/: extractor.py  validator.py
todo-app/src/todo_app/services/: database_service.py  task_service.py
todo-app/src/todo_app/utilis/: json_utils.py  parser_utilis.py  utils.py
todo-app/tests/: test_app.py  test_database_service.py  test_extractor.py  test_task_service.py  test_validator.py
