[project]
name = "todo-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Obinna",email = "113989828+obinna2001@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "typer (>=0.19.2,<0.20.0)"
]

[tool.poetry]
packages = [{include = "todo_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
